name:                cagnotte
version:             0.1.0.0
synopsis:            Program to handle common money pot
                     when traveling with friends.
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cagnotte.Debts
                     , Cagnotte.Types
                     , Cagnotte.Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 4.4.0
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

executable cagnotte
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cagnotte
                     , megaparsec >= 4.4.0
  default-language:    Haskell2010
